avoid some spacing issues

--- a/app/design/theme-maker/mode-data-editor.module.css
+++ b/app/design/theme-maker/mode-data-editor.module.css
@@ -1,5 +1,5 @@
 .allocator {
-  height: 15rem;
+  height: 16rem;
 }
 
 @container color-editor-wrapper (min-width: 24rem) {
